Postal - an email checker applet for the ROX Panel
2007-03-25 Ken Hayber <ken@hayber.us>

2006-09-24 Ken Hayber <ken@hayber.us>
	Version 003
	* Big changes!
	* Refactored to support other mailbox types (IMAP, POP, MBOX)
	* New Account Editor GUI
	* Support notification-daemon (if pynotify installed)
	* Icon changes
	* Only report new messages in the Tooltip.

2006-01-17 Ken Hayber <ken@hayber.us>
	Version 002
	* Pass readonly=True to IMAP4.select() command.  Without this, another 
connection may take over the mailbox and raise an exception.
	* Add option to play sound when new mail arrives. 

2005-12-31 Ken Hayber <ken@hayber.us>
	Version 001
	* First release